objects/Contact__x.object
<CustomObject>
    <fields>
        <fullName>Title__c</fullName>
        <externalDeveloperName>Title</externalDeveloperName>
        <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>US_Opt_in_Opt_out_c__c</fullName>
        <externalDeveloperName>US_Opt_in_Opt_out__c</externalDeveloperName>
        <label>US Opt-in/Opt-out</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opt-in</fullName>
                </value>
                <value>
                    <fullName>Opt-out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>US_Opt_in_Opt_out_date_c__c</fullName>
        <externalDeveloperName>US_Opt_in_Opt_out_date__c</externalDeveloperName>
        <label>US Opt-in/Opt-out date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>What_They_Make_c__c</fullName>
        <externalDeveloperName>What_They_Make__c</externalDeveloperName>
        <label>What They Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cirrusadv_Created_by_Cirrus_Insight_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>cirrusadv__Created_by_Cirrus_Insight__c</externalDeveloperName>
        <label>Created by Cirrus Insight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ftxt_Owners_BU_c__c</fullName>
        <externalDeveloperName>ftxt_Owners_BU__c</externalDeveloperName>
        <label>Owners BU</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ftxt_Owners_Region_c__c</fullName>
        <externalDeveloperName>ftxt_Owners_Region__c</externalDeveloperName>
        <label>Owners Region</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>is_Active_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>is_Active__c</externalDeveloperName>
        <label>is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>phone_Extension_c__c</fullName>
        <externalDeveloperName>phone_Extension__c</externalDeveloperName>
        <label>phone Extension</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Sales_Rep_c__c</fullName>
        <externalDeveloperName>txt_Sales_Rep__c</externalDeveloperName>
        <label>Sales Rep</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Contact</label>
    <pluralLabel>Contacts</pluralLabel>
</CustomObject>